# engine

./: .gitignore  CMakeLists.txt  README.md
3rd/Python-3.9.7/: CMakeLists.txt
3rd/glad/: glad.c
3rd/include/glad/: glad.h
3rd/lib/compile/: PhysXPvdSDK_static_64.lib
3rd/python/Linux/: pyconfig.h
resource/models/backpack/: backpack.mtl
resource/models/floor/: floor.mtl
resource/models/wall/: wall.mtl
script/: script_main.py
script/ecs/: cdef.py  hit_object_system.py  rotate_system.py  scene.py
shader/: cluster_init_cs.glsl  cluster_light_cs.glsl  common.frag  common.vert  cube_sampler_vs.glsl  gbuffer_fs.glsl  gbuffer_vs.glsl  hdr_fg.glsl  pbr_brdf_fs.glsl  pbr_fs.glsl  pbr_hdr_preprocess_fs.glsl  pbr_irradiance_fs.glsl  pbr_prefilter_fs.glsl  pbr_vs.glsl  shadow_fg.glsl  shadow_point_fg.glsl  shadow_point_gs.glsl  shadow_vs.glsl  skybox.frag  skybox.vert  ssao_fs.glsl  taa_sample.glsl
src/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
src/ecs/: component.h  component_base.cpp  component_base.h  component_camera.cpp  component_camera.h  component_light.cpp  component_light.h  component_model.cpp  component_model.h  component_physics.cpp  component_physics.h  component_trans.cpp  component_trans.h  entity.h  entity_base.cpp  entity_base.h  pyfunc.cpp  pyfunc.h  pymath.cpp  pymath.h  python_ecs.cpp  python_ecs.h  scene.cpp  scene.h  system.h  system_camera.cpp  system_camera.h  system_input.cpp  system_input.h  system_model.cpp  system_model.h  system_physics.cpp  system_physics.h  system_scene.cpp  system_scene.h  system_syncrender.cpp  system_syncrender.h  utils.cpp  utils.h  world.cpp  (+1 more)
src/pybind/: pybind.h  pyboxing.cpp  pyboxing.h  pyobject.cpp  pyobject.h
src/render/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  render.cpp  render.h  resource.cpp  resource.h  resource_mgr.cpp  resource_mgr.h  resource_utils.cpp  resource_utils.h  utils.cpp  utils.h
