cmake_minimum_required(VERSION 3.10)
project(python)

set(CMAKE_EXPORT_COMPILE_COMMANDS on)
set(CMAKE_CXX_STANDARD 17)

set(IncludeFiles
  "Include/Python-ast.h"
  "Include/Python.h"
  "Include/abstract.h"
  "Include/asdl.h"
  "Include/ast.h"
  "Include/bitset.h"
  "Include/boolobject.h"
  "Include/bytearrayobject.h"
  "Include/bytesobject.h"
  "Include/cellobject.h"
  "Include/ceval.h"
  "Include/classobject.h"
  "Include/code.h"
  "Include/codecs.h"
  "Include/compile.h"
  "Include/complexobject.h"
  "Include/context.h"
  "Include/cpython/abstract.h"
  "Include/cpython/bytearrayobject.h"
  "Include/cpython/bytesobject.h"
  "Include/cpython/ceval.h"
  "Include/cpython/code.h"
  "Include/cpython/dictobject.h"
  "Include/cpython/fileobject.h"
  "Include/cpython/fileutils.h"
  "Include/cpython/frameobject.h"
  "Include/cpython/import.h"
  "Include/cpython/initconfig.h"
  "Include/cpython/interpreteridobject.h"
  "Include/cpython/listobject.h"
  "Include/cpython/methodobject.h"
  "Include/cpython/object.h"
  "Include/cpython/objimpl.h"
  "Include/cpython/pyerrors.h"
  "Include/cpython/pylifecycle.h"
  "Include/cpython/pymem.h"
  "Include/cpython/pystate.h"
  "Include/cpython/sysmodule.h"
  "Include/cpython/traceback.h"
  "Include/cpython/tupleobject.h"
  "Include/cpython/unicodeobject.h"
  "Include/datetime.h"
  "Include/descrobject.h"
  "Include/dictobject.h"
  "Include/dynamic_annotations.h"
  "Include/enumobject.h"
  "Include/errcode.h"
  "Include/eval.h"
  "Include/fileobject.h"
  "Include/fileutils.h"
  "Include/floatobject.h"
  "Include/frameobject.h"
  "Include/funcobject.h"
  "Include/genobject.h"
  "Include/graminit.h"
  "Include/grammar.h"
  "Include/import.h"
  "Include/internal/pegen_interface.h"
  "Include/internal/pycore_abstract.h"
  "Include/internal/pycore_accu.h"
  "Include/internal/pycore_atomic.h"
  "Include/internal/pycore_bytes_methods.h"
  "Include/internal/pycore_byteswap.h"
  "Include/internal/pycore_call.h"
  "Include/internal/pycore_ceval.h"
  "Include/internal/pycore_code.h"
  "Include/internal/pycore_condvar.h"
  "Include/internal/pycore_context.h"
  "Include/internal/pycore_dtoa.h"
  "Include/internal/pycore_fileutils.h"
  "Include/internal/pycore_gc.h"
  "Include/internal/pycore_getopt.h"
  "Include/internal/pycore_gil.h"
  "Include/internal/pycore_hamt.h"
  "Include/internal/pycore_hashtable.h"
  "Include/internal/pycore_import.h"
  "Include/internal/pycore_initconfig.h"
  "Include/internal/pycore_interp.h"
  "Include/internal/pycore_object.h"
  "Include/internal/pycore_pathconfig.h"
  "Include/internal/pycore_pyerrors.h"
  "Include/internal/pycore_pyhash.h"
  "Include/internal/pycore_pylifecycle.h"
  "Include/internal/pycore_pymem.h"
  "Include/internal/pycore_pystate.h"
  "Include/internal/pycore_runtime.h"
  "Include/internal/pycore_sysmodule.h"
  "Include/internal/pycore_traceback.h"
  "Include/internal/pycore_tupleobject.h"
  "Include/internal/pycore_warnings.h"
  "Include/interpreteridobject.h"
  "Include/intrcheck.h"
  "Include/iterobject.h"
  "Include/listobject.h"
  "Include/longintrepr.h"
  "Include/longobject.h"
  "Include/marshal.h"
  "Include/memoryobject.h"
  "Include/methodobject.h"
  "Include/modsupport.h"
  "Include/moduleobject.h"
  "Include/namespaceobject.h"
  "Include/node.h"
  "Include/object.h"
  "Include/objimpl.h"
  "Include/odictobject.h"
  "Include/opcode.h"
  "Include/osdefs.h"
  "Include/osmodule.h"
  "Include/parsetok.h"
  "Include/patchlevel.h"
  "Include/picklebufobject.h"
  "Include/py_curses.h"
  "Include/pyarena.h"
  "Include/pycapsule.h"
  "Include/pyctype.h"
  "Include/pydebug.h"
  "Include/pyerrors.h"
  "Include/pyexpat.h"
  "Include/pyfpe.h"
  "Include/pyframe.h"
  "Include/pyhash.h"
  "Include/pylifecycle.h"
  "Include/pymacro.h"
  "Include/pymath.h"
  "Include/pymem.h"
  "Include/pyport.h"
  "Include/pystate.h"
  "Include/pystrcmp.h"
  "Include/pystrhex.h"
  "Include/pystrtod.h"
  "Include/pythonrun.h"
  "Include/pythread.h"
  "Include/pytime.h"
  "Include/rangeobject.h"
  "Include/setobject.h"
  "Include/sliceobject.h"
  "Include/structmember.h"
  "Include/structseq.h"
  "Include/symtable.h"
  "Include/sysmodule.h"
  "Include/token.h"
  "Include/traceback.h"
  "Include/tracemalloc.h"
  "Include/tupleobject.h"
  "Include/ucnhash.h"
  "Include/unicodeobject.h"
  "Include/weakrefobject.h"
  "Modules/_math.h"
  "Modules/rotatingtree.h"
  "Modules/sre.h"
  "Modules/sre_constants.h"
  "Modules/sre_lib.h"
  "Modules/_io/_iomodule.h"
  "Modules/cjkcodecs/alg_jisx0201.h"
  "Modules/cjkcodecs/cjkcodecs.h"
  "Modules/cjkcodecs/emu_jisx0213_2000.h"
  "Modules/cjkcodecs/mappings_cn.h"
  "Modules/cjkcodecs/mappings_hk.h"
  "Modules/cjkcodecs/mappings_jisx0213_pair.h"
  "Modules/cjkcodecs/mappings_jp.h"
  "Modules/cjkcodecs/mappings_kr.h"
  "Modules/cjkcodecs/mappings_tw.h"
  "Modules/cjkcodecs/multibytecodec.h"
  "Objects/stringlib/count.h"
  "Objects/stringlib/fastsearch.h"
  "Objects/stringlib/find.h"
  "Objects/stringlib/partition.h"
  "Objects/stringlib/replace.h"
  "Objects/stringlib/split.h"
  "Objects/unicodetype_db.h"
  "Parser/parser.h"
  "Parser/tokenizer.h"
  "Parser/pegen/parse_string.h"
  "Parser/pegen/pegen.h"
  "Python/ceval_gil.h"
  "Python/condvar.h"
  "Python/importdl.h"
  "Python/thread_nt.h"
  "Python/wordcode_helpers.h"
  )

set(SourceFiles
  "Modules/_abc.c"
  "Modules/_bisectmodule.c"
  "Modules/_blake2/blake2module.c"
  "Modules/_blake2/blake2b_impl.c"
  "Modules/_blake2/blake2s_impl.c"
  "Modules/_codecsmodule.c"
  "Modules/_collectionsmodule.c"
  "Modules/_contextvarsmodule.c"
  "Modules/_csv.c"
  "Modules/_functoolsmodule.c"
  "Modules/_heapqmodule.c"
  "Modules/_json.c"
  "Modules/_localemodule.c"
  "Modules/_lsprof.c"
  "Modules/_math.c"
  "Modules/_pickle.c"
  "Modules/_randommodule.c"
  "Modules/_sha3/sha3module.c"
  "Modules/_sre.c"
  "Modules/_stat.c"
  "Modules/_struct.c"
  "Modules/_weakref.c"
  "Modules/arraymodule.c"
  "Modules/atexitmodule.c"
  "Modules/audioop.c"
  "Modules/binascii.c"
  "Modules/cmathmodule.c"
  "Modules/_datetimemodule.c"
  "Modules/errnomodule.c"
  "Modules/faulthandler.c"
  "Modules/gcmodule.c"
  "Modules/itertoolsmodule.c"
  "Modules/main.c"
  "Modules/mathmodule.c"
  "Modules/md5module.c"
  "Modules/mmapmodule.c"
  "Modules/_opcode.c"
  "Modules/_operator.c"
  "Modules/parsermodule.c"
  "Modules/_peg_parser.c"
  "Modules/posixmodule.c"
  "Modules/rotatingtree.c"
  "Modules/sha1module.c"
  "Modules/sha256module.c"
  "Modules/sha512module.c"
  "Modules/signalmodule.c"
  "Modules/_statisticsmodule.c"
  "Modules/symtablemodule.c"
  "Modules/_threadmodule.c"
  "Modules/_tracemalloc.c"
  "Modules/timemodule.c"
  "Modules/xxsubtype.c"
  "Modules/_xxsubinterpretersmodule.c"
  "Modules/_io/fileio.c"
  "Modules/_io/bytesio.c"
  "Modules/_io/stringio.c"
  "Modules/_io/bufferedio.c"
  "Modules/_io/iobase.c"
  "Modules/_io/textio.c"
  "Modules/_io/_iomodule.c"
  "Modules/cjkcodecs/_codecs_cn.c"
  "Modules/cjkcodecs/_codecs_hk.c"
  "Modules/cjkcodecs/_codecs_iso2022.c"
  "Modules/cjkcodecs/_codecs_jp.c"
  "Modules/cjkcodecs/_codecs_kr.c"
  "Modules/cjkcodecs/_codecs_tw.c"
  "Modules/cjkcodecs/multibytecodec.c"
  "Objects/abstract.c"
  "Objects/accu.c"
  "Objects/boolobject.c"
  "Objects/bytearrayobject.c"
  "Objects/bytes_methods.c"
  "Objects/bytesobject.c"
  "Objects/call.c"
  "Objects/capsule.c"
  "Objects/cellobject.c"
  "Objects/classobject.c"
  "Objects/codeobject.c"
  "Objects/complexobject.c"
  "Objects/descrobject.c"
  "Objects/dictobject.c"
  "Objects/enumobject.c"
  "Objects/exceptions.c"
  "Objects/fileobject.c"
  "Objects/floatobject.c"
  "Objects/frameobject.c"
  "Objects/funcobject.c"
  "Objects/genericaliasobject.c"
  "Objects/genobject.c"
  "Objects/interpreteridobject.c"
  "Objects/iterobject.c"
  "Objects/listobject.c"
  "Objects/longobject.c"
  "Objects/memoryobject.c"
  "Objects/methodobject.c"
  "Objects/moduleobject.c"
  "Objects/namespaceobject.c"
  "Objects/object.c"
  "Objects/obmalloc.c"
  "Objects/odictobject.c"
  "Objects/picklebufobject.c"
  "Objects/rangeobject.c"
  "Objects/setobject.c"
  "Objects/sliceobject.c"
  "Objects/structseq.c"
  "Objects/tupleobject.c"
  "Objects/typeobject.c"
  "Objects/unicodectype.c"
  "Objects/unicodeobject.c"
  "Objects/weakrefobject.c"
  "Parser/acceler.c"
  "Parser/grammar1.c"
  "Parser/listnode.c"
  "Parser/myreadline.c"
  "Parser/node.c"
  "Parser/parser.c"
  "Parser/parsetok.c"
  "Parser/tokenizer.c"
  "Parser/token.c"
  "Parser/pegen/pegen.c"
  "Parser/pegen/parse.c"
  "Parser/pegen/parse_string.c"
  "Parser/pegen/peg_api.c"
  "Python/pyhash.c"
  "Python/_warnings.c"
  "Python/asdl.c"
  "Python/ast.c"
  "Python/ast_opt.c"
  "Python/ast_unparse.c"
  "Python/bltinmodule.c"
  "Python/bootstrap_hash.c"
  "Python/ceval.c"
  "Python/codecs.c"
  "Python/compile.c"
  "Python/context.c"
  "Python/dynamic_annotations.c"
  "Python/errors.c"
  "Python/fileutils.c"
  "Python/formatter_unicode.c"
  "Python/frozen.c"
  "Python/future.c"
  "Python/getargs.c"
  "Python/getcompiler.c"
  "Python/getcopyright.c"
  "Python/getopt.c"
  "Python/getplatform.c"
  "Python/getversion.c"
  "Python/graminit.c"
  "Python/hamt.c"
  "Python/hashtable.c"
  "Python/import.c"
  "Python/importdl.c"
  "Python/initconfig.c"
  "Python/marshal.c"
  "Python/modsupport.c"
  "Python/mysnprintf.c"
  "Python/mystrtoul.c"
  "Python/pathconfig.c"
  "Python/peephole.c"
  "Python/preconfig.c"
  "Python/pyarena.c"
  "Python/pyctype.c"
  "Python/pyfpe.c"
  "Python/pylifecycle.c"
  "Python/pymath.c"
  "Python/pytime.c"
  "Python/pystate.c"
  "Python/pystrcmp.c"
  "Python/pystrhex.c"
  "Python/pystrtod.c"
  "Python/dtoa.c"
  "Python/Python-ast.c"
  "Python/pythonrun.c"
  "Python/structmember.c"
  "Python/symtable.c"
  "Python/sysmodule.c"
  "Python/thread.c"
  "Python/traceback.c"

  )

set(LIBPYTHON_OMIT_FROZEN_SOURCES
  "Modules/getbuildinfo.c"
  "Parser/myreadline.c"
  "Parser/parsetok.c"
  "Parser/tokenizer.c"
  )

set(WindowsHeaders
  "PC/errmap.h"
  "PC/pyconfig.h"
  )

set(WindowsSrc
  "Modules/_winapi.c"
  "Modules/_io/winconsoleio.c"
  "Python/dynload_win.c"
  "PC/winreg.c"
  "PC/invalid_parameter_handler.c"
  "PC/config.c"
  "PC/getpathp.c"
  "PC/msvcrtmodule.c"
  "PC/dl_nt.c"  
  )

set(LinuxSrc
  "Modules/pwdmodule.c"
  "Modules/getpath.c"
  "Python/dynload_shlib.c"
  "Linux/Modules/config.c"
  )

if (WIN32)
  list(APPEND IncludeFiles ${WindowsHeaders})
  list(APPEND SourceFiles ${WindowsSrc})
  include_directories("${CMAKE_CURRENT_SOURCE_DIR}/PC")
elseif (UNIX)
  list(APPEND SourceFiles ${LinuxSrc})
  include_directories("${CMAKE_CURRENT_SOURCE_DIR}/Linux")
endif()

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/Include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/Include/internal")

add_definitions()

add_library(pythoncore
  ${IncludeFiles}
  ${SourceFiles}
  ${LIBPYTHON_OMIT_FROZEN_SOURCES}
  )

add_executable(pythonbin
  "Programs/python.c"
  )

if (WIN32)
  target_link_libraries(pythoncore PUBLIC
    version
    shlwapi
    ws2_32
    pathcch
    )
  target_compile_definitions(pythoncore PUBLIC -DPy_BUILD_CORE -DPy_BUILD_CORE_BUILTIN -D_USRDLL -DPy_ENABLE_SHARED -DMS_DLL_ID="3.9" -DPY3_DLLNAME="python3${CMAKE_DEBUG_POSTFIX}")
elseif (UNIX)
  target_compile_definitions(pythoncore PUBLIC -DPy_BUILD_CORE -DPy_BUILD_CORE_BUILTIN -DPLATLIBDIR="lib" -DSOABI="cpython-39-x86_64-linux-gnu" -DVERSION="3.9" -DPYTHONPATH="" -DPREFIX="/usr/local" -DEXEC_PREFIX="/usr/local" -DVPATH="..")
endif()

target_link_libraries(pythonbin PRIVATE pythoncore)

if (UNIX)
  target_link_libraries(pythoncore PUBLIC pthread util m dl)
endif()

target_compile_definitions(pythonbin PRIVATE -D_CONSOLE -DPy_BUILD_CORE)
